[tool.isort]
known_third_party = "discord"
multi_line_output = 3
case_sensitive = true
combine_as_imports = true
line_length = 88
atomic = true
include_trailing_comma=true

[tool.poetry]
name = "dougbot2"
version = "0.20.0"
description = "Home-grown Discord bot for the DougDoug Discord server."
authors = ["tonyzbf <tonyzbf@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10.3"
"discord.py" = {url = "https://github.com/Rapptz/discord.py/archive/5a06fa5f3e28d2b7191722e1a84c541560008aea.zip"}
Django = "^4.0.4"
aiodns = "^3.0.0"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
attrs = "^21.4.0"
cchardet = "^2.1.7"
geopy = "^2.2.0"
inflect = "^5.5.2"
Jinja2 = "^3.1.2"
Markdown = "^3.3.6"
nltk = "^3.7"
Pillow = "^9.1.0"
psutil = "^5.9.0"
PyJWT = "^2.3.0"
python-decouple = "^3.6"
simplejson = "^3.17.6"
termcolor = "^1.1.0"
timezonefinder = "^5.2.0"
aiojobs = "^1.0.0"
django-cacheops = "^6.0"
django-extensions = "^3.1.5"
django-redis = "^5.2.0"
more-itertools = "^8.12.0"
redis = "^4.2.2"
toml = "^0.10.2"
dateparser = "^1.1.1"
asyncstdlib = "^3.10.4"
Pint = "^0.19.2"
APScheduler = "^3.9.1"
arrow = "^1.2.2"
emoji = "^1.7.0"
rapidfuzz = "^2.0.11"
django-timezone-field = "^5.0"

[tool.poetry.dev-dependencies]
logging_tree = "^1.9"
pipdeptree = "^2.0.0"
snakeviz = "^2.1.0"
coverage = "^6.3"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
